cursive-bootstrap/tests/ui/E-CON/E-CON-0151.cursive
// RUN: compile-fail
// DIAG: E-CON-0151
// SPEC: 8.9
// DESC: shared capture in GPU dispatch

record Data {
    var value: i32
}

procedure gpu_shared(d: shared Data) -> () {
    parallel on gpu {
        dispatch 0..100 |i| {
            let x: i32 = d.value  //~ ERROR E-CON-0151: shared capture in GPU
        }
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
